test/valid/test3.1.puzzle
# This puzzle is unsolvable
3
1 5 3
4 0 8
6 7 2
