test/invalid/test3.4.puzzle
# This puzzle is unsolvable
3
2 1 7
7 0 8
4 5 3
